search-bar-boder-fix, facets + fix with show more, modify footer letter spacing.

--- a/src/app/navbar/expandable-navbar-section/expandable-navbar-section.component.scss
+++ b/src/app/navbar/expandable-navbar-section/expandable-navbar-section.component.scss
@@ -11,8 +11,8 @@
 }
 :host ::ng-deep {
   .dropdown-menu.menu-browser {
-    background: #11519b !important;
-    border: 1px solid #11519b !important;
+    background: white !important;  // Override the default background color #11519B
+    border: 1px solid white !important;
     left: auto !important;
     right: 0 !important;
   }
