--- a/src/styles/_custom_variables.scss
+++ b/src/styles/_custom_variables.scss
@@ -89,7 +89,7 @@
 
   --ds-gap: 0.25rem;
 
-  --ds-main-color: #11519b !important;
+  --ds-main-color: white !important;
   --ds-sub-color: #0063f8 !important;
   --ds-sub-small-color: #009df5 !important;
 }
